# reto-python

./: .gitignore  README.md
reto-01/: README.md  main.py  reto_1.py
reto-01/NoaVelasco/: Retos-atareao.ipynb  reto01.py
reto-01/atareao/: main.py  main2.py
reto-01/avarez/: main.py
reto-01/eleloi/: main.py
reto-01/fpellicer/: reto_1.py
reto-01/gabrilov/: reto01.py
reto-01/joselo/: main.py
reto-01/latorredev/: reto_01.py
reto-01/lesclaz/: main.py
reto-01/rburgos/: main.py
reto-01/rubenleon/: main.py
reto-01/tejedor1967MACOS/: main.py
reto-02/: README.md
reto-02/NoaVelasco/: reto02.py
reto-02/PalyPalillo/: main.py
reto-02/atareao/: main.py
reto-02/avarez/: main.py
reto-02/eleloi/: main.py  main_test.py
reto-02/fpellicer/: reto_2.py
reto-02/gabrilov/: reto02.py
reto-02/joselo/: main.py
reto-02/lesclaz/: main.py
reto-02/rburgos/: main.py
reto-02/rubenleon/: main.py
reto-02/tejedor1967MACOS/: main.py
reto-03/: README.md  main.py
reto-03/NoaVelasco/: main.py  reto03_corregido.py
reto-04/: README.md
reto-04/eleloi/: configurator.py  main.py  pyproject.toml  utils.py
reto-05/: README.md  Requisitos.txt  configurator.py  ejemplo.toml  ejemplo_toml.py  main.py  utils.py
reto-06/: README.md
reto-06/eleloi/: _config.py  _executers.py  config.toml  main.py  pyproject.toml
reto-06/eleloi/test/: sample_config.toml  test_config.py  test_config.toml  test_executers.py
reto-07/: README.md
reto-08/: README.md
reto-09/: README.md
reto-10/: README.md
reto-11/: README.md
reto-12/: README.md
reto02/: main.py
(+171 files in other folders)
