[tool.poetry]
name = "reto-04 de atareao.es"
version = "0.1.0"
description = ""
authors = ["eleloi"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
